<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_update_error_msg"
        android:layout_centerInParent="true"
        />
    <Button
        android:id="@+id/retry_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:layout_below="@id/error_message"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id="@+id/go_to_home_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_home"
        android:layout_below="@id/retry_btn"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>